# swift-invoice-poc

./: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  LLM_HELP_SCOPE.md  README.md  SETUP.md  docker-compose.yml  index.html  nginx.conf
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  database.sql  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: efbcf87cd36a_initial_migration.py
backend/app/: config.py  exception_handlers.py  exceptions.py  logging_config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  invoices.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/middleware/: logging.py
backend/app/models/: invoice.py
backend/app/schemas/: health.py  invoice.py
backend/tests/: conftest.py  test_health.py  test_invoices.py
docs/: AWS_DEPLOYMENT.md  OPENAPI_DOCS.md
src/: index.css
src/pages/: Index.tsx
